--- a/portfolio/src/globalVariables.css
+++ b/portfolio/src/globalVariables.css
@@ -1,5 +1,6 @@
 html {
     --color-background: #001011;
+    --max-home-page-height: 700px;
 
     --spacing-xs: 6px;
     --spacing-s: 12px;
